--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>BetLane</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -16,18 +17,18 @@
     <h1>BetLane</h1>
   </header>
 
-  <!-- Tagline Section -->
-  <section class="tagline-section">
-    <h2>Spin &amp; Win</h2>
-    <p>Test your luck for amazing rewards!</p>
-  </section>
-
   <!-- Money-bills container (behind main content) -->
   <div id="confetti-container"></div>
 
   <!-- Main content container -->
   <div class="container">
     <div class="wheel-container">
+
+      <!-- Tagline Section -->
+      <section class="tagline-section">
+        <h2>Spin &amp; Win</h2>
+        <p>Test your luck for amazing rewards!</p>
+      </section>
 
       <!-- Money Counter & Spin Counter -->
       <div class="counter-row">
