Added Menu Buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
       <img src="logo.png" alt="BetLane Logo Placeholder">
     </div>
     <h1>BetLane</h1>
+    <div class="menu-icons">
+      <button class="wallet-btn">Help</button>
+      <button class="wallet-btn">Wallet</button>
+      <div class="profile-icon">
+        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Profile">
+      </div>
+    </div>
   </header>
+
+  <!-- Tagline Section -->
+  <section class="tagline-section">
+    <h2>Spin &amp; Win</h2>
+    <p>Test your luck for amazing rewards!</p>
+  </section>
 
   <!-- Money-bills container (behind main content) -->
   <div id="confetti-container"></div>
@@ -23,12 +36,6 @@
   <!-- Main content container -->
   <div class="container">
     <div class="wheel-container">
-
-      <!-- Tagline Section -->
-      <section class="tagline-section">
-        <h2>Spin &amp; Win</h2>
-        <p>Test your luck for amazing rewards!</p>
-      </section>
 
       <!-- Money Counter & Spin Counter -->
       <div class="counter-row">
